--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ backports-abc==0.5
 certifi==2019.11.28
 cffi==1.13.2
 cryptography==2.8
-Django==1.11.22
+django>=1.11.28
 enum34==1.1.6
 future==0.18.2
 futures==3.3.0
@@ -11,8 +11,8 @@ idna==2.6
 image==1.5.27
 ipaddress==1.0.23
 pathlib==1.0.1
-Pillow==6.1.0
-psutil==5.4.2
+Pillow==6.2.2
+psutil==5.6.6
 pycairo==1.16.2
 pycparser==2.19
 pygobject==3.26.1
